fix: corriger plusieurs failles de securite et bugs detectes par Sonar