@@ -6,9 +6,7 @@ import com.pfa.medical_backend.services.AntecedentGynecoObstetriqueService;
 import com.pfa.medical_backend.repositories.AntecedentGynecoObstetriqueRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -18,11 +16,16 @@ import org.springframework.web.bind.annotation.*;
 @RequestMapping("/api/antecedents-gyneco")
 public class AntecedentGynecoObstetriqueController {
 
-    @Autowired
-    private AntecedentGynecoObstetriqueService agoService;
+    private final AntecedentGynecoObstetriqueService agoService;
+    private final AntecedentGynecoObstetriqueRepository agoRepository;
 
-    @Autowired
-    private AntecedentGynecoObstetriqueRepository agoRepository;
+    public AntecedentGynecoObstetriqueController(
+        AntecedentGynecoObstetriqueService agoService,
+        AntecedentGynecoObstetriqueRepository agoRepository
+    ) {
+        this.agoService = agoService;
+        this.agoRepository = agoRepository;
+    }
 
     private AntecedentGynecoObstetriqueDTO toDTO(AntecedentGynecoObstetrique ago) {
         AntecedentGynecoObstetriqueDTO dto = new AntecedentGynecoObstetriqueDTO();
@@ -47,12 +50,29 @@ public class AntecedentGynecoObstetriqueController {
         return dto;
     }
 
+    private AntecedentGynecoObstetrique toEntity(AntecedentGynecoObstetriqueDTO dto) {
+        AntecedentGynecoObstetrique ago = new AntecedentGynecoObstetrique();
+        ago.setIdentifiantAGO(dto.getIdentifiantAGO());
+        ago.setDatePremieresRegles(dto.getDatePremieresRegles());
+        ago.setMenopause(dto.getMenopause());
+        ago.setGrossessesNombreTotal(dto.getGrossessesNombreTotal());
+        ago.setGrossessesAvortementsProvoques(dto.getGrossessesAvortementsProvoques());
+        ago.setGrossessesPreeclampsie(dto.getGrossessesPreeclampsie());
+        ago.setGrossessesAccouchementsPrematures(dto.getGrossessesAccouchementsPrematures());
+        ago.setGrossessesAvortementsSpontanes(dto.getGrossessesAvortementsSpontanes());
+        ago.setGrossessesCesarienne(dto.getGrossessesCesarienne());
+        ago.setContraceptionMethodes(dto.getContraceptionMethodes());
+        ago.setContraceptionDuree(dto.getContraceptionDuree());
+        ago.setPathologieMammaireGyneco(dto.getPathologieMammaireGyneco());
+        return ago;
+    }
+
     @GetMapping
     @PreAuthorize("hasAnyAuthority('READ_PATIENT', 'READ_DONNEUR')")
     public List<AntecedentGynecoObstetriqueDTO> getAll() {        
         return agoRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/patient/{patientId}")
@@ -66,8 +86,8 @@ public class AntecedentGynecoObstetriqueController {
 
     @PostMapping("/patient/{patientId}")
     @PreAuthorize("hasAuthority('WRITE_PATIENT')")
-    public ResponseEntity<AntecedentGynecoObstetriqueDTO> create(@PathVariable String patientId, @RequestBody AntecedentGynecoObstetrique ago) {
-        AntecedentGynecoObstetrique created = agoService.create(ago, patientId);
+    public ResponseEntity<AntecedentGynecoObstetriqueDTO> create(@PathVariable String patientId, @RequestBody AntecedentGynecoObstetriqueDTO dto) {
+        AntecedentGynecoObstetrique created = agoService.create(toEntity(dto), patientId);
         return new ResponseEntity<>(toDTO(created), HttpStatus.CREATED);
     }
 
@@ -79,17 +99,18 @@ public class AntecedentGynecoObstetriqueController {
             .map(ResponseEntity::ok)
             .orElse(ResponseEntity.notFound().build());
     }
+
     @PostMapping("/donneur/{donorId}")
     @PreAuthorize("hasAuthority('WRITE_DONNEUR')")
-    public ResponseEntity<AntecedentGynecoObstetriqueDTO> createForDonor(@PathVariable Integer donorId, @RequestBody AntecedentGynecoObstetrique ago) {
-        AntecedentGynecoObstetrique created = agoService.createForDonor(ago, donorId);
+    public ResponseEntity<AntecedentGynecoObstetriqueDTO> createForDonor(@PathVariable Integer donorId, @RequestBody AntecedentGynecoObstetriqueDTO dto) {
+        AntecedentGynecoObstetrique created = agoService.createForDonor(toEntity(dto), donorId);
         return new ResponseEntity<>(toDTO(created), HttpStatus.CREATED);
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasAnyAuthority('WRITE_PATIENT', 'WRITE_DONNEUR')")
-    public ResponseEntity<AntecedentGynecoObstetriqueDTO> update(@PathVariable Integer id, @RequestBody AntecedentGynecoObstetrique details) {
-        AntecedentGynecoObstetrique updated = agoService.update(id, details);
+    public ResponseEntity<AntecedentGynecoObstetriqueDTO> update(@PathVariable Integer id, @RequestBody AntecedentGynecoObstetriqueDTO detailsDto) {
+        AntecedentGynecoObstetrique updated = agoService.update(id, toEntity(detailsDto));
         return ResponseEntity.ok(toDTO(updated));
     }
 
