@@ -10,7 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/biochimie-sanguine")
@@ -43,7 +43,7 @@ public class BiochimieSangController {
                 adto.setValeurAna(a.getValeurAna());
                 adto.setTypeAnalyse(a.getTypeAnalyse());
                 return adto;
-            }).collect(Collectors.toList());
+            }).toList();
             dto.setAnalyses(list);
         }
         return dto;
@@ -54,7 +54,7 @@ public class BiochimieSangController {
     public List<BiochimieSangDTO> getAll() {
         return bsRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/patient/{patientId}")
