@@ -10,7 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/hematologie")
@@ -44,7 +44,7 @@ public class FicheHematologieController {
                 adto.setValeurAna(a.getValeurAna());
                 adto.setTypeAnalyse(a.getTypeAnalyse());
                 return adto;
-            }).collect(Collectors.toList());
+            }).toList();
             dto.setAnalyses(list);
         }
         return dto;
@@ -55,7 +55,7 @@ public class FicheHematologieController {
     public List<HemotologieHemostaseDTO> getAll() {
         return hhRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/patient/{patientId}")
