@@ -11,7 +11,7 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/hormones-vitamines")
@@ -47,7 +47,7 @@ public class HormonesVitaminesController {
                 adto.setValeurAna(a.getValeurAna());
                 adto.setTypeAnalyse(a.getTypeAnalyse());
                 return adto;
-            }).collect(Collectors.toList());
+            }).toList();
             dto.setAnalyses(list);
         }
         return dto;
@@ -69,7 +69,7 @@ public class HormonesVitaminesController {
             list = hvRepository.findAll();
         }
 
-        List<HormonesVitaminesDTO> dtos = list.stream().map(this::toDTO).collect(Collectors.toList());
+        List<HormonesVitaminesDTO> dtos = list.stream().map(this::toDTO).toList();
         return ResponseEntity.ok(dtos);
     }
 
