@@ -10,7 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/microbiologie")
@@ -41,7 +41,7 @@ public class MicrobiologieSerologieController {
                 adto.setValeurAna(a.getValeurAna());
                 adto.setTypeAnalyse(a.getTypeAnalyse());
                 return adto;
-            }).collect(Collectors.toList());
+            }).toList();
             dto.setAnalyses(list);
         }
         return dto;
@@ -52,7 +52,7 @@ public class MicrobiologieSerologieController {
     public List<MicrobiologieSerologieDTO> getAll() {
         return msRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/patient/{patientId}")
