@@ -3,20 +3,24 @@ package com.pfa.medical_backend.controllers;
 import com.pfa.medical_backend.dto.PrescriptionDTO;
 import com.pfa.medical_backend.entities.Prescription;
 import com.pfa.medical_backend.services.PrescriptionService;
-import org.springframework.beans.factory.annotation.Autowired;
+
+import jakarta.validation.Valid;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/prescriptions")
 public class PrescriptionController {
 
-    @Autowired
-    private PrescriptionService prescriptionService;
+    private final PrescriptionService prescriptionService;
+
+    public PrescriptionController(PrescriptionService prescriptionService) {
+        this.prescriptionService = prescriptionService;
+    }
 
     private PrescriptionDTO toDTO(Prescription p) {
         PrescriptionDTO dto = new PrescriptionDTO();
@@ -36,6 +40,15 @@ public class PrescriptionController {
         return dto;
     }
 
+    private Prescription toEntity(PrescriptionDTO dto) {
+        Prescription p = new Prescription();
+        p.setIdentifiantPrescription(dto.getIdentifiantPrescription());
+        p.setDatePremierePrise(dto.getDatePremierePrise());
+        p.setDosageMed(dto.getDosageMed());
+        p.setDateSortie(dto.getDateSortie());
+        return p;
+    }
+
     @GetMapping
     @PreAuthorize("hasAnyAuthority('READ_PATIENT', 'READ_IMMUNO')")
     public List<PrescriptionDTO> getAll(@RequestParam(required = false) Integer traitementId) {
@@ -43,7 +56,7 @@ public class PrescriptionController {
             ? prescriptionService.getByTraitement(traitementId) 
             : prescriptionService.getAll();
             
-        return list.stream().map(this::toDTO).collect(Collectors.toList());
+        return list.stream().map(this::toDTO).toList();
     }
 
     @GetMapping("/{id}")
@@ -60,15 +73,15 @@ public class PrescriptionController {
     public ResponseEntity<PrescriptionDTO> create(
             @PathVariable Integer traitementId, 
             @PathVariable Integer medicamentId, 
-            @RequestBody Prescription p) {
-        Prescription created = prescriptionService.create(p, traitementId, medicamentId);
+            @Valid @RequestBody PrescriptionDTO dto) {
+        Prescription created = prescriptionService.create(toEntity(dto), traitementId, medicamentId);
         return new ResponseEntity<>(toDTO(created), HttpStatus.CREATED);
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasAuthority('WRITE_IMMUNO')")
-    public ResponseEntity<PrescriptionDTO> update(@PathVariable Integer id, @RequestBody Prescription details) {
-        Prescription updated = prescriptionService.update(id, details);
+    public ResponseEntity<PrescriptionDTO> update(@PathVariable Integer id, @RequestBody PrescriptionDTO detailsDto) {
+        Prescription updated = prescriptionService.update(id, toEntity(detailsDto));
         return ResponseEntity.ok(toDTO(updated));
     }
 
