@@ -3,20 +3,21 @@ package com.pfa.medical_backend.controllers;
 import com.pfa.medical_backend.dto.TransplantationAnterieureDTO;
 import com.pfa.medical_backend.entities.TransplantationAnterieure;
 import com.pfa.medical_backend.services.TransplantationAnterieureService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/transplantations-anterieures")
 public class TransplantationAnterieureController {
 
-    @Autowired
-    private TransplantationAnterieureService taService;
+    private final TransplantationAnterieureService taService;
+
+    public TransplantationAnterieureController(TransplantationAnterieureService taService) {
+        this.taService = taService;
+    }
 
     private TransplantationAnterieureDTO toDTO(TransplantationAnterieure ta) {
         TransplantationAnterieureDTO dto = new TransplantationAnterieureDTO();
@@ -38,6 +39,23 @@ public class TransplantationAnterieureController {
         return dto;
     }
 
+    private TransplantationAnterieure toEntity(TransplantationAnterieureDTO dto) {
+        TransplantationAnterieure ta = new TransplantationAnterieure();
+        ta.setIdentifiantTR(dto.getIdentifiantTR());
+        ta.setDateTR(dto.getDateTR());
+        ta.setLieuTR(dto.getLieuTR());
+        ta.setLieuSuiviTR(dto.getLieuSuiviTR());
+        ta.setTypeDonneur(dto.getTypeDonneur());
+        ta.setHlaDonneur(dto.getHlaDonneur());
+        ta.setTraitementImmunoSuppresseurInduction(dto.getTraitementImmunoSuppresseurInduction());
+        ta.setTraitementImmunoSuppresseurEntretien(dto.getTraitementImmunoSuppresseurEntretien());
+        ta.setCausePerteGreffonRenale(dto.getCausePerteGreffonRenale());
+        ta.setDateRetourDialyse(dto.getDateRetourDialyse());
+        ta.setTransplantectomie(dto.getTransplantectomie());
+        ta.setTransplantectomieIndication(dto.getTransplantectomieIndication());
+        return ta;
+    }
+
     @GetMapping
     @PreAuthorize("hasAuthority('READ_PATIENT')")
     public List<TransplantationAnterieureDTO> getAll(@RequestParam(required = false) String patientId) {
@@ -45,7 +63,7 @@ public class TransplantationAnterieureController {
             ? taService.getByPatient(patientId) 
             : taService.getAll();
             
-        return list.stream().map(this::toDTO).collect(Collectors.toList());
+        return list.stream().map(this::toDTO).toList();
     }
 
     @GetMapping("/{id}")
@@ -59,15 +77,15 @@ public class TransplantationAnterieureController {
 
     @PostMapping("/patient/{patientId}")
     @PreAuthorize("hasAuthority('WRITE_PATIENT')")
-    public ResponseEntity<TransplantationAnterieureDTO> create(@PathVariable String patientId, @RequestBody TransplantationAnterieure ta) {
-        TransplantationAnterieure created = taService.create(ta, patientId);
+    public ResponseEntity<TransplantationAnterieureDTO> create(@PathVariable String patientId, @RequestBody TransplantationAnterieureDTO dto) {
+        TransplantationAnterieure created = taService.create(toEntity(dto), patientId);
         return new ResponseEntity<>(toDTO(created), HttpStatus.CREATED);
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasAuthority('WRITE_PATIENT')")
-    public ResponseEntity<TransplantationAnterieureDTO> update(@PathVariable Integer id, @RequestBody TransplantationAnterieure details) {
-        TransplantationAnterieure updated = taService.update(id, details);
+    public ResponseEntity<TransplantationAnterieureDTO> update(@PathVariable Integer id, @RequestBody TransplantationAnterieureDTO detailsDto) {
+        TransplantationAnterieure updated = taService.update(id, toEntity(detailsDto));
         return ResponseEntity.ok(toDTO(updated));
     }
 
